--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -9,10 +9,10 @@ dns_name: cluster.local
 dns_ip: "{{ service_subnet }}.10"
 
 # Network implementation('flannel', 'calico')
-network: flannel
-pod_network_cidr: 10.244.0.0/16
-cni_opts: --iface=enp0s8 # flannel: --iface=enp0s8, calico: interface=enp0s8
+network: calico
+pod_network_cidr: 192.168.0.0/16
+cni_opts: interface=enp0s8 # flannel: --iface=enp0s8, calico: interface=enp0s8
 
-# A list of insecure registrys you might need to define
-insecure_registrys:
-# - "gcr.io"
+# Tain master
+taint_master: true
+
