--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -2,7 +2,8 @@
 
 systemd_dir: /lib/systemd/system
 system_env_dir: /etc/sysconfig
-dropin_dir: /usr/lib/systemd/system
+dropin_dir: /etc/systemd/system
 network_dir: /etc/kubernetes/network
 kubeadmin_config: /etc/kubernetes/admin.conf
 kube_addon_dir: /etc/kubernetes/addon
+kube_ecp_dir: /etc/kubernetes/ecp
