--- a/site.yml
+++ b/site.yml
@@ -1,16 +1,11 @@
 ---
 
-- hosts: cluster
-  gather_facts: no
-  become: yes
-  roles:
-    - { role: docker, tags: docker }
-
 - hosts: master
-  gather_facts: no
+  gather_facts: yes
   become: yes
   roles:
     - { role: master, tags: master }
+    - { role: cni, tags: cni }
 
 - hosts: node
   gather_facts: no
@@ -22,5 +17,5 @@
   gather_facts: no
   become: yes
   roles:
-    - { role: cni, tags: cni }
     - { role: addon, tags: addon }
+    - { role: ecp, tags: ecp }
