--- a/roles/ecp/tasks/appstore.yml
+++ b/roles/ecp/tasks/appstore.yml
@@ -38,7 +38,7 @@
             get po --namespace={{ ecp_namespace }} | grep rudder
   run_once: true
   register: check_rudder
-  ignore_errors: true
+  failed_when: check_rudder.rc != 0 and check_rudder.rc != 1
 
 - name: Check if tiller pod already exists
   shell: |
@@ -46,7 +46,7 @@
             get po -namespace={{ ecp_namespace }} | grep tiller
   run_once: true
   register: check_tiller
-  ignore_errors: true
+  failed_when: check_tiller.rc != 0 and check_tiller.rc != 1
     
 - name: Create rudder
   when: check_rudder|failed
