--- a/roles/ecp/tasks/config.yml
+++ b/roles/ecp/tasks/config.yml
@@ -8,7 +8,7 @@
             get configmap --namespace={{ ecp_namespace }} | grep ecp-config
   run_once: true
   register: check_config
-  ignore_errors: true
+  failed_when: check_config.rc != 0 and check_config.rc != 1
 
 - name: Create config
   when: check_config|failed
