--- a/roles/ecp/tasks/namespace.yml
+++ b/roles/ecp/tasks/namespace.yml
@@ -8,7 +8,7 @@
             get namespaces | grep {{ ecp_namespace }}
   run_once: true
   register: check_namespace
-  ignore_errors: true
+  failed_when: check_namespace.rc != 0 and check_namespace.rc != 1
 
 - name: Create namespace
   when: check_namespace|failed
