--- a/roles/ecp/vars/main.yml
+++ b/roles/ecp/vars/main.yml
@@ -20,4 +20,13 @@ events_image: events:20170626
 license_image: license:20170626
 # lyra
 lyra_image: lyra:20170626
+# mysql
+mysql_image: mysql:5.7
+# prometheus
+grafana_image: grafana-sky:20170626
+docker_image: docker
+kubestatemetrics_image: kube-state-metrics:latest
+nodeexporter_image: node-exporter:0.12.0
+kubeapiexporter_image: kube-api-exporter
+prometheus_image: prometheus:v1.5.2
 
