--- a/roles/ecp/vars/main.yml
+++ b/roles/ecp/vars/main.yml
@@ -25,7 +25,7 @@ mysql_image: mysql:5.7
 # prometheus
 grafana_image: grafana-sky:20170626
 docker_image: docker
-kubestatemetrics_image: kube-state-metrics:latest
+kubestatemetrics_image: kube-state-metrics:v0.5.0
 nodeexporter_image: node-exporter:0.12.0
 kubeapiexporter_image: kube-api-exporter
 prometheus_image: prometheus:v1.5.2
