--- a/roles/ecp/tasks/main.yml
+++ b/roles/ecp/tasks/main.yml
@@ -58,3 +58,18 @@
   tags:
     - ecp_prometheus
 
+- name: Create pyxis service
+  include: pyxis.yml
+  tags:
+    - ecp_pyxis
+
+- name: Create river service
+  include: river.yml
+  tags:
+    - ecp_river
+
+- name: Create sas service
+  include: sas.yml
+  tags:
+    - ecp_sas
+
