--- a/roles/ecp/vars/main.yml
+++ b/roles/ecp/vars/main.yml
@@ -29,4 +29,11 @@ kubestatemetrics_image: kube-state-metrics:v0.5.0
 nodeexporter_image: node-exporter:0.12.0
 kubeapiexporter_image: kube-api-exporter
 prometheus_image: prometheus:v1.5.2
+# pyxis
+pyxis_image: ading1977/pyxis:20170626
+# river
+river_image: ading1977/river:20170626
+# sas
+keystone_image: ading1977/keystone:20161108
+sas_image: ading1977/skyform-sas:20170626
 
