--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -7,3 +7,4 @@ network_dir: /etc/kubernetes/network
 kubeadmin_config: /etc/kubernetes/admin.conf
 kube_addon_dir: /etc/kubernetes/addon
 kube_ecp_dir: /etc/kubernetes/ecp
+kubeadm_config: /etc/kubernetes/kubeadm.yaml
