--- a/roles/ecp/tasks/mysql.yml
+++ b/roles/ecp/tasks/mysql.yml
@@ -37,7 +37,7 @@
             create -f {{ kube_ecp_dir }}/mysql/mysql-service.yaml
   run_once: true
 
-- name: Wait until mysql exists
+- name: Wait until mysql pod starts to run
   shell: |
     kubectl --kubeconfig={{ kubeadmin_config }} \
             get po --namespace={{ ecp_namespace }} | grep mysql
