--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -3,13 +3,13 @@
 - name: Add Kubernetes APT GPG key
   when: ansible_os_family == "Debian"
   apt_key:
-    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+    url: {{ apt_key }}
     state: present
 
 - name: Add Kubernetes APT repository
   when: ansible_os_family == "Debian"
   apt_repository:
-    repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+    repo: {{ apt_repo }}
     state: present
     filename: 'kubernetes'
 
@@ -19,7 +19,7 @@
     name: Kubernetes
     description: Kubernetes Repository
     file: kubernetes
-    baseurl: http://yum.kubernetes.io/repos/kubernetes-el7-x86_64
+    baseurl: {{ yum_repo }}
     enabled: yes
     gpgcheck: no
 
