--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -3,13 +3,13 @@
 - name: Add Kubernetes APT GPG key
   when: ansible_os_family == "Debian"
   apt_key:
-    url: {{ apt_key }}
+    url: "{{ apt_key }}"
     state: present
 
 - name: Add Kubernetes APT repository
   when: ansible_os_family == "Debian"
   apt_repository:
-    repo: {{ apt_repo }}
+    repo: "{{ apt_repo }}"
     state: present
     filename: 'kubernetes'
 
@@ -19,7 +19,7 @@
     name: Kubernetes
     description: Kubernetes Repository
     file: kubernetes
-    baseurl: {{ yum_repo }}
+    baseurl: "{{ yum_repo }}"
     enabled: yes
     gpgcheck: no
 
