--- a/roles/ecp/tasks/logging.yml
+++ b/roles/ecp/tasks/logging.yml
@@ -15,7 +15,7 @@
   failed_when: check_canes_rc.rc != 0 and check_canes_rc.rc != 1
 
 - name: Create canes rc
-  when: check_canes_rc|failed
+  when: check_canes_rc.rc != 0
   shell: |
     kubectl --kubeconfig={{ kubeadmin_config }} \
             create -f {{ kube_ecp_dir }}/canes/canes-controller.yaml
@@ -29,7 +29,7 @@
   failed_when: check_canes_svc.rc != 0 and check_canes_svc.rc != 1
 
 - name: Create canes service
-  when: check_canes_svc|failed
+  when: check_canes_svc.rc != 0
   shell: |
     kubectl --kubeconfig={{ kubeadmin_config }} \
             create -f {{ kube_ecp_dir }}/canes/canes-service.yaml
@@ -43,7 +43,7 @@
   failed_when: check_es_svc.rc != 0 and check_es_svc.rc != 1
 
 - name: Create elasticsearch service
-  when: check_es_svc|failed
+  when: check_es_svc.rc != 0
   shell: |
     kubectl --kubeconfig={{ kubeadmin_config }} \
             create -f {{ kube_ecp_dir }}/canes/es-service-internal-svc.yaml
@@ -57,7 +57,7 @@
   failed_when: check_fluentd_ds.rc !=0 and check_fluentd_ds.rc != 1
 
 - name: Create fluentd daemonset
-  when: check_fluentd_ds|failed
+  when: check_fluentd_ds.rc != 0
   shell: |
     kubectl --kubeconfig={{ kubeadmin_config }} \
             create -f {{ kube_ecp_dir }}/canes/fluentd-ds.yaml
