--- a/roles/ecp/tasks/main.yml
+++ b/roles/ecp/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Label nodes
-  include: label.yml
+  import_tasks: label.yml
   tags:
     - ecp_label
 
@@ -9,39 +9,39 @@
     - ecp_dir
 
 - name: Create sky-firmament namespace
-  include: namespace.yml
+  import_tasks: namespace.yml
   tags:
     - ecp_namespace
 
 - name: Create ecp configuration
-  include: config.yml
+  import_tasks: config.yml
   tags:
     - ecp_config
 
 - name: Create license service
-  include: license.yml
+  import_tasks: license.yml
   tags:
     - ecp_license
 
 - name: Create lyra service
-  include: lyra.yml
+  import_tasks: lyra.yml
   tags:
     - ecp_lyra
 
 - name: Create river service
-  include: river.yml
+  import_tasks: river.yml
   tags:
     - ecp_river
 
 - name: Create ecp appstore
-  include: appstore.yml
+  import_tasks: appstore.yml
   tags:
     - ecp_appstore
 
 # Needs to verify
 - name: Create logging service
   when: not opensource
-  include: logging.yml
+  import_tasks: logging.yml
   tags:
     - ecp_logging
 
@@ -49,27 +49,27 @@
 # Existing one is outdated causing client exception
 - name: Create events service
   when: not opensource
-  include: events.yml
+  import_tasks: events.yml
   tags:
     - ecp_events
 
 - name: Create prometheus services
-  include: prometheus.yml
+  import_tasks: prometheus.yml
   tags:
     - ecp_prometheus
 
 - name: Create mysql service
-  include: mysql.yml
+  import_tasks: mysql.yml
   tags:
     - ecp_mysql
 
 - name: Create sas service
-  include: sas.yml
+  import_tasks: sas.yml
   tags:
     - ecp_sas
 
 - name: Create pyxis service
-  include: pyxis.yml
+  import_tasks: pyxis.yml
   tags:
     - ecp_pyxis
 
