--- a/roles/ecp/tasks/label.yml
+++ b/roles/ecp/tasks/label.yml
@@ -1,16 +1,13 @@
 ---
-- set_fact: 
-    total_nodes: "{{ groups['cluster'] | length }}"
-
 - name: Label cluster with one node
-  when: total_nodes | int == 1
+  when: cluster_hosts | length == 1
   shell: "{{ item }}"
   with_items:
     - kubectl label --overwrite=true nodes {{ ansible_hostname }} appstore=yes
     - kubectl label --overwrite=true nodes {{ ansible_hostname }} prometheus=yes
 
 - name: Get worker nodes of multi-nodes cluster
-  when: total_nodes | int > 1
+  when: cluster_hosts | length  > 1
   shell: |
     kubectl get nodes -l kubeadm.alpha.kubernetes.io/role!=master \
         -o jsonpath='{.items[*].status.addresses[?(@.type=="Hostname")].address}'
