clean up calico when destroy

--- a/destroy.yml
+++ b/destroy.yml
@@ -41,6 +41,7 @@
         - /var/etcd
         - /var/lib/etcd
         - /usr/db_data
+        - /var/run/calico
       ignore_errors: True
 
     - name: Flush IP tables
