--- a/roles/node/tasks/main.yml
+++ b/roles/node/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
+- name: Reset Kubernetes component
+  shell: "kubeadm reset"
 
 - name: Enable and restart kubelet engine
   systemd:
@@ -6,7 +8,6 @@
     daemon_reload: yes
     state: restarted
     enabled: yes
-  register: started_kubelet
 
 - name: Join to Kubernetes cluster
   shell: |
