--- a/roles/kubernetes/tasks/main.yml
+++ b/roles/kubernetes/tasks/main.yml
@@ -34,10 +34,15 @@
     update_cache: yes
     state: present
   with_items:
+    - yum-versionlock
     - kubectl-{{ yum_kubectl_version }}
     - kubelet-{{ yum_kubelet_version }}
     - kubernetes-cni-{{ yum_kubernetes_cni_version }}
     - kubeadm-{{ yum_kubeadm_version }}
+
+- name: Lock the version of kubernetes packages
+  when: ansible_os_family == "RedHat"
+  shell: yum versionlock add kubectl kubelet kubernetes-cni kubeadm
 
 - name: Install kubernetes packages (Debian/Ubuntu)
   when: ansible_os_family == "Debian"
@@ -50,6 +55,10 @@
     - kubelet={{ apt_kubelet_version }}
     - kubernetes-cni={{ apt_kubernetes_cni_version }}
     - kubeadm={{ apt_kubeadm_version }}
+
+- name: Lock the version of kubernetes packages
+  when: ansible_os_family == "Debian"
+  shell: apt-mark hold kubectl kubelet kubernetes-cni kubeadm
 
 - name: Disable swap
   command: swapoff -a
