--- a/roles/ecp/tasks/appstore.yml
+++ b/roles/ecp/tasks/appstore.yml
@@ -55,6 +55,21 @@
             create -f {{ kube_ecp_dir }}/appstore/helm_rudder.yaml
   run_once: true
 
+- name: Check if tiller service account already exists
+  shell: |
+    kubectl --kubeconfig={{ kubeadmin_config }} \
+            get sa --namespace=kube-system | grep tiller
+  run_once: true
+  register: check_tiller_sa
+  failed_when: check_tiller_sa.rc != 0 and check_tiller_sa.rc != 1
+
+- name: Create RBAC
+  when: check_tiller_sa.rc != 0
+  shell: |
+    kubectl --kubeconfig={{ kubeadmin_config }} \
+            create -f {{ kube_ecp_dir }}/appstore/tiller-k8s-rbac.yaml
+  run_once: true
+
 - name: Create tiller
   when: check_tiller.rc != 0
   shell: |
